# ev3dev-lang-rust-template

./: Cargo.toml  Makefile  README.md
.cargo/: config  config.toml
src/: main.rs  menu.rs
