[package]
name = "ev3dev-lang-rust-template"
version = "0.2.0"
edition = "2021"

[dependencies]
ev3dev-lang-rust = { version = "0.14", features = ["ev3", "screen"] }
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"
lazy_static = "1.4"
reqwest = { version = "0.11", default-features=false, features = ["rustls-tls", "blocking", "json"] }

[profile.release]
lto = true
strip = true
opt-level = "s"
